kubernetes/fluxcd/repositories/hello-family/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-family-service
  namespace: default
spec:
  selector:
    app: hello-family-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
