kubernetes/fluxcd/repositories/hello-family/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-flux-greetings-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    -  host: "localhost"
       http:
         paths:
            - path: /hello-family-greetings(/|$)(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: hello-family-service
                  port:
                    number: 8080
